--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.1",
     "better-sqlite3": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
